--- a/app/templates/paiement_success.html
+++ b/app/templates/paiement_success.html
@@ -31,11 +31,11 @@
 <body>
 
 <div class="success-message">
-    <p>Your payment was successful!</p>
+    <p>Votre paiement a été effectué avec succès !</p>
 </div>
 
 <div class="redirect-message">
-    <p>You will be redirected to the home page in <span class="countdown">5</span> seconds...</p>
+    <p>Vous serez redirigé(e) vers la page d'accueil dans <span class="countdown">5</span> secondes...</p>
 </div>
 
 <script>
