--- a/app/static/admin_styles/card.css
+++ b/app/static/admin_styles/card.css
@@ -18,9 +18,9 @@
     width: 200px;
     border-radius: 10px;
     color: #fff;
-    box-shadow: 0px 0px 77px 25px rgba(226,226,226,1);
-    -webkit-box-shadow: 0px 0px 77px 25px rgba(226,226,226,1);
-    -moz-box-shadow: 0px 0px 77px 25px rgba(226,226,226,1);
+    box-shadow: 0px 0px 77px 25px rgba(226, 226, 226, 1);
+    -webkit-box-shadow: 0px 0px 77px 25px rgba(226, 226, 226, 1);
+    -moz-box-shadow: 0px 0px 77px 25px rgba(226, 226, 226, 1);
     cursor: pointer;
     transition: all .5s;
 }
@@ -30,7 +30,7 @@
 }
 
 .cards .card:hover span {
-    scale : 1.1;
+    scale: 1.1;
     opacity: .3;
 }
 
@@ -45,34 +45,34 @@
 }
 
 .cards .card:first-child {
-    background: rgb(131,58,180);
-    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(29,210,253,1) 100%, rgba(252,176,69,1) 100%);
+    background: rgb(131, 58, 180);
+    background: linear-gradient(90deg, #fb8ea7 0%, #edbfca 100%, #f09aae 100%);
 }
 
 .cards .card:nth-child(2) {
-    background: rgb(131,58,180);
-    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 100%, rgba(252,176,69,1) 100%);
+    background: rgb(131, 58, 180);
+    background: linear-gradient(90deg, #b391fd 0%, #d0bcfb 100%, #b79af7 100%);
 }
 
 
 .cards .card:nth-child(3) {
-    background: rgb(131,58,180);
-    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(29,253,89,1) 100%);
+    background: rgb(131, 58, 180);
+    background: linear-gradient(90deg, #7dd0d1 0%, #8fd7d8 100%)
 }
 
 
 .cards .card:nth-child(4) {
-    background: rgb(180,58,128);
-    background: linear-gradient(90deg, rgba(180,58,128,1) 0%, rgba(29,253,220,1) 100%);
+    background: rgb(180, 58, 128);
+    background: linear-gradient(90deg, #f9d67f 0%, #fbda86 100%);
 }
 
+
 .cards .card:nth-child(5) {
-    background: rgb(175,180,58);
-    background: linear-gradient(90deg, rgba(175,180,58,1) 0%, rgba(253,111,29,1) 100%);
+    background: rgb(175, 180, 58);
+    background: linear-gradient(90deg, #6ebbef 0%, #a2d5f6 100%);
 }
 
 
 .cards .card h2 {
     text-align: center;
 }
-
