--- a/app/static/admin_styles/base.css
+++ b/app/static/admin_styles/base.css
@@ -25,8 +25,12 @@ table {
 table,
 th,
 td {
-    border: 1px solid black;
+    border: 1.5px solid #cccccc;
     text-align: center;
+}
+
+th {
+    background-color: #cdc7c75d;
 }
 
 .actions a {
@@ -77,7 +81,7 @@ td {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    border-bottom: 1px solid #777;
+    border-bottom: 1px solid #77777755;
     gap: 20px;
     padding: 10px 20px;
     position: fixed;
@@ -95,12 +99,21 @@ td {
     cursor: pointer;
     padding: 10px;
     font-size: 1rem;
-    transition: all .3s;
+    font-weight: bold;
+    transition: background-color .3s ease-in-out, color .3s ease-in-out;
+}
+
+.inner-container .secondary-menu .logoutBtn i {
+    transition: transform .2s ease-in-out;
 }
 
 .inner-container .secondary-menu .logoutBtn:hover {
     background-color: var(--main-background);
     color: #000;
+}
+
+.inner-container .secondary-menu .logoutBtn:hover i {
+    transform: translateX(3px);
 }
 
 .inner-container .secondary-menu .logoutBtn i {
@@ -124,7 +137,7 @@ td {
     width: 250px;
     background-color: rgb(255, 255, 255);
     overflow: auto;
-    border-right: 1px solid #777;
+    border-right: 1px solid #77777755;
 }
 
 .main-menu .logo {
@@ -202,7 +215,6 @@ form:not(.logout) {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    /* align-items: center; */
     justify-content: center;
     width: fit-content;
     margin: 40px auto;
