--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -174,7 +174,7 @@ header .inner1 .log:hover {
 }
 
 header .inner1 .log i:first-child {
-    font-size: 30px;
+    font-size: 25px;
 }
 
 header .inner1 .log i:nth-child(2) {
@@ -228,11 +228,13 @@ header .inner1 .menu ul li a {
     width: 100%;
     height: 100%;
     border-radius: var(--main-border-radius);
+    transition: all .3s ease;
 }
 
 header .inner1 .menu ul li a:hover {
     background-color: var(--second-underline);
     color: #000;
+    font-weight: bolder;
 }
 
 header .inner1 .menu ul li:nth-child(2) {
@@ -515,10 +517,12 @@ body .container {
     width: 100%;
     text-align: center;
     padding-block: 10px;
-    /* border: 1px solid red; */
     background-color: var(--main-gray-bg);
     border-radius: var(--main-border-radius);
     font-weight: bold;
+    box-shadow: 0px 0px 62px -4px rgba(195, 195, 195, 1);
+    -webkit-box-shadow: 0px 0px 62px -4px rgba(195, 195, 195, 1);
+    -moz-box-shadow: 0px 0px 62px -4px rgba(195, 195, 195, 1);
 }
 
 #filterForm label {
