--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -3,6 +3,7 @@
 {% block title %} Profile {% endblock title %} 
 {% block block_css %}
 <link rel="stylesheet" href="{% static "css/profile.css" %}">
+<link rel="stylesheet" href="{% static "css/card.css" %}">
 {% endblock block_css %} 
 {% block bell_notif %}
 <i class="fa-solid fa-bell">{% if notifications.count > 0 %}<span></span>{% endif %}</i>
@@ -38,6 +39,12 @@
       <div><span>Date fin vol: </span>{{ reservation.id_vol.date_f_vol}}</div>
     </li>
   {% endfor %}  
+  {% if reservations.count == 0 %}
+      <li>
+          <span class="content">0 reservations</span>
+      </li>
+  {% endif %}
+
   </ul>
 </div>
 {% endblock bell_notif %}
@@ -118,8 +125,53 @@
         </div>
   </div>
 </form>
+
+<section class="second">
+  <h1>Mes favoris</h1>
+  <form id="filterForm">
+      <label for="locationFilter">Filtrer par localisation:</label>
+      <input type="text" id="locationFilter" name="locationFilter" placeholder="Entrer une localisation">
+      <button type="button" id="filterFormId">Filtrer</button>
+  </form>
+  {% for fav_voyage in favorite_voyages %}
+      <div class="mini-card-voyage filterable">
+          <div class="image">
+              <img src="{% static "assets/cities/"%}{{ fav_voyage.id_voyage.id_ville.imageville_set.first.id_images.path_image }}" alt="">
+                  <span class="reaction">
+                      <img class="heart" src="{% static "assets/like-empty.svg" %}" data-voyage="{{ fav_voyage.id_voyage.id_voyage }}" id="{{ fav_voyage.id_voyage.id_voyage }}" onclick="toggleLike(this)">
+                      <form>
+                          {% csrf_token %}
+                          <input type="hidden" name="id_user" value=1>
+                          <input type="hidden" name="id_voyage" value={{ fav_voyage.id_voyage.id_voyage }}>
+                          <input type="hidden" name="inputLike" value="#">
+                      </form>
+                  </span>
+          </div>
+          <div class="body">
+              <div class="title-localisation">
+                  <span class="title">{{ fav_voyage.id_voyage.titre_voyage }}</span>
+                  <span class="localisation filterable"><i class="fa-solid fa-location-dot"></i>{{ fav_voyage.id_voyage.ville_set }}, {{ fav_voyage.id_ville.nom_ville }}</span>
+              </div>
+              <span class="price"><img src="{% static 'assets/background-pricing.png' %}" alt="background-pricing">Prix: <span>{{ fav_voyage.id_voyage.prix_voyage }} Dhs</span></span>
+              <span class="nom-hotel">Nom hotel: <span>{{ fav_voyage.id_voyage.id_hotel.nom_hotel }}</span></span>
+              <span class="rating">Durée: <span>{{ fav_voyage.id_voyage.duree_voyage }} jours / {{ fav_voyage.id_voyage.duree_voyage|add:"-1" }} nuits</span></span>
+              <span class="percentage">Promotion: <span>{{ fav_voyage.id_voyage.id_promotion.pourcentage }} %</span></span>
+              <form method="get" action="{% url 'promotions_details' fav_voyage.id_voyage.id_voyage %}">
+                  <button type="submit"><i class="fa-solid fa-angles-right">&nbsp;&nbsp;</i>Details</button>
+              </form>
+          </div>
+      </div>
+  {% endfor %}
+  {% if favorite_voyages.count == 0 %}
+    <p>
+      Aucun favori pour le moment.
+    </p>
+  {% endif %}
+</section>
 {% endblock main %}
 {% block js_block %}
+<script src="{% static "js/formFilter.js" %}" type='text/javascript'></script>
+
 <script defer>
     const formInputs = document.querySelectorAll('form input');
     const formh2 = document.querySelector('.profile-card h2');
