--- a/app/templates/user/promotions_details.html
+++ b/app/templates/user/promotions_details.html
@@ -77,9 +77,9 @@
         <a class="prev" onclick="plusSlides(-1)">❮</a>
         <a class="next" onclick="plusSlides(1)">❯</a>
       </div>
-      <div class="caption-container">
+      <div class="caption-container" style="display: none;">
         <p id="caption"></p>
-      </div>
+      </div> 
 
       <div class="row">
         {% for image in avoir.id_ville.imageville_set.all %}
