--- a/app/templates/user/voyage_organise_details.html
+++ b/app/templates/user/voyage_organise_details.html
@@ -75,9 +75,9 @@
             <a class="prev" onclick="plusSlides(-1)">❮</a>
             <a class="next" onclick="plusSlides(1)">❯</a>
         </div>
-        <div class="caption-container">
+        <div class="caption-container" style="display: none;">
             <p id="caption"></p>
-        </div>
+        </div> 
         
         <div class="row">
             {% for image in avoir.id_ville.imageville_set.all %}
@@ -113,7 +113,7 @@
             <p>{% if hotel.petit_dejeuner%}<i class="fa-solid fa-utensils"></i>{% endif %}</p>
             <div class="price">+{{ vol.id_vol.prix_vol }} MAD</div>
         </div>
-        <a href= "{%url 'paiement'  vol.id_vol.id_vol%}" > Choisir</a>
+        <a href= "{%url 'paiement'  vol.id_vol.id_vol%}"> Choisir</a>
     </div>
     {% endfor%}
     {% if inclure.count == 0 %}
