--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -223,7 +223,7 @@
     <header>
         <div class="inner1">
             <div class="logo">
-                <img src="{% static 'assets/travelmor-logo-bg.png' %}" alt="LOGO TRAVEL MOR">
+                <a href="{% url 'home' %}"><img src="{% static 'assets/travelmor-logo-bg.png' %}" alt="LOGO TRAVEL MOR"></a>
             </div>
             <div class="search" onclick="openSearch()">
                 <input type="text" name="search" placeholder="Recherche">
