--- a/app/templates/user/home.html
+++ b/app/templates/user/home.html
@@ -33,7 +33,7 @@
             color: #fff;
         }
         body .container {
-            background: linear-gradient(90deg, #000000d3, rgba(0, 0, 0, 0.448)), url('{% static "assets/background-home.jpg" %}') center/cover;
+            background: linear-gradient(90deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('{% static "assets/background-home.jpg" %}') center/cover;
             height: 700px;
             position: relative;
         }
