--- a/app/templates/admin_pages/notifications_gestion.html
+++ b/app/templates/admin_pages/notifications_gestion.html
@@ -31,6 +31,7 @@
                     <th> Date notification </th>
                     <th> Type </th>
                     <th> Content </th>
+                    <th> Action </th>
                 </tr>
             </thead>
             <tbody>
