--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -443,7 +443,7 @@
     
         function toggleLike(heart) {
             if(!id_user){
-                console.log('you are not connected');
+                //console.log('you are not connected');
                 document.getElementById('login-form-modal').style.display='block';
             }else {
                 const voyageId = heart.id;
