--- a/app/templates/user/home.html
+++ b/app/templates/user/home.html
@@ -83,7 +83,7 @@
         <div class="log" id="LogMenuButton">
             <i class="fa-solid fa-bars"></i>
             <i class="fa-solid fa-circle-user"></i>
-            <div class="menu hide" id="LogMenu">
+            <div class="menu" id="LogMenu">
                 <ul>
                     <li><a href="{% url 'registration' %}">Inscription</a></li>
                     <li><a href="#" onclick="document.getElementById('login-form-modal').style.display='block'">Connexion</a></li>
