--- a/app/templates/admin_pages/commentaires_gestion.html
+++ b/app/templates/admin_pages/commentaires_gestion.html
@@ -5,12 +5,12 @@
 {% endblock main_menu_link_class8 %}
 {% block main %}
 <div class="container">
-    <h1>administration Commentraires</h1>
+    <h1 style="margin-bottom: 30px;">administration Commentraires</h1>
     <div>
-        <form action="" method="GET" class="filter">
+        {% comment %} <form action="" method="GET" class="filter">
             <input type="text" name="search" name="search">
             <input type="submit" value="filtrer">
-        </form>
+        </form> {% endcomment %}
         <table>
             <thead>
                 <tr>
@@ -18,6 +18,7 @@
                     <th> ID Voyage </th>
                     <th> Auteur </th>
                     <th> Contenu </th>
+                    <th> Evaluation </th>
                     <th> Date redaction </th>
                     <th> Actions </th>
                 </tr>
@@ -29,6 +30,25 @@
                     <td>{{Commentaire.id_voyage.id_voyage}} </td> 
                     <td>{{Commentaire.id_utilisateur.nom}} {{Commentaire.id_utilisateur.prenom}} </td> 
                     <td>{{Commentaire.text_comment}} </td> 
+                    {% comment %} <td>{% for i in Commentaire.evaluation %} <i class="fa-solid fa-star"></i>{% endfor %}</td>  {% endcomment %}
+                    <td>
+                        {% if Commentaire.evaluation >= 1 %}
+                            <i class="fa-solid fa-star"></i>
+                        {% endif %}
+                        {% if Commentaire.evaluation >= 2 %}
+                            <i class="fa-solid fa-star"></i>
+                        {% endif %}
+                        {% if Commentaire.evaluation >= 3 %}
+                            <i class="fa-solid fa-star"></i>
+                        {% endif %}
+                        {% if Commentaire.evaluation >= 4 %}
+                            <i class="fa-solid fa-star"></i>
+                        {% endif %}
+                        {% if Commentaire.evaluation >= 5 %}
+                            <i class="fa-solid fa-star"></i>
+                        {% endif %}
+                    </td>
+                    
                     <td>{{Commentaire.date_redaction}} {{Commentaire.heure_redaction}} </td> 
                     <td class="actions">
                         <a href="{% url 'supp_commentaire' Commentaire.id_comment%}"><i class="fa-solid fa-trash" style="margin-right: 5px;"></i>supprimer</a>
