--- a/app/static/admin_styles/base.css
+++ b/app/static/admin_styles/base.css
@@ -306,5 +306,5 @@ form:not(.logout) button[type="submit"]:hover {
     align-items: center;
     gap: 60px;
     flex-wrap: wrap;
-    margin: 100px auto;
+    margin: 50px auto 0;
 }
